--- a/project/accounts/templates/index.html
+++ b/project/accounts/templates/index.html
@@ -16,17 +16,17 @@
     <h1>欢迎来到首页！</h1>
 
     <!-- 注册按钮 -->
-    <a href="{% url 'register' %}">
+    <a href="{% url 'accounts:register' %}">
         <button>注册</button>
     </a>
 
     <!-- 登录按钮 -->
-    <a href="{% url 'login' %}">
+    <a href="{% url 'accounts:login' %}">
         <button>登录</button>
     </a>
 
     <!-- 注销按钮 -->
-    <a href="{% url 'logout' %}">
+    <a href="{% url 'accounts:logout' %}">
         <button>注销</button>
     </a>
     <p><a href="https://github.com/lieyang25/webweb">webweb</a></p>
