--- a/project/accounts/templates/login.html
+++ b/project/accounts/templates/login.html
@@ -12,6 +12,6 @@
       <button type="submit">登录</button>
     </form>
 
-    <p>还没有账户？<a href="{% url 'register' %}">注册</a></p>
+    <p>还没有账户？<a href="{% url 'accounts:register' %}">注册</a></p>
 </body>
 </html>
