--- a/project/accounts/templates/register.html
+++ b/project/accounts/templates/register.html
@@ -12,6 +12,6 @@
     <button type="submit">注册</button>
   </form>
 
-  <p>已有账户？<a href="{% url 'login' %}">登录</a></p>
+  <p>已有账户？<a href="{% url 'accounts:login' %}">登录</a></p>
 </body>
 </html>
