--- a/project/accounts/templates/base2.html
+++ b/project/accounts/templates/base2.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'styles/st.css' %}">
 </head>
 <body>
-  <p>
-      <a href="{% url 'accounts:page' %}">myKitchen</a>
-      <a href="{% url 'accounts:pizzas' %}">Pizzas</a>
-  </p>
-  {% block content %}{% endblock content %}
+    <p>
+        <a href="{% url 'accounts:page' %}">myKitchen</a>
+        <a href="{% url 'accounts:pizzas' %}">Pizzas</a>
+    </p>
+    {% block content %}{% endblock content %}
 </body>
 </html>
