--- a/project/accounts/templates/login.html
+++ b/project/accounts/templates/login.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登录</title>
+    <link rel="stylesheet" href="{% static 'styles/st.css' %}">
 </head>
 <body>
     <h2>登录</h2>
     <form method="POST">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">登录</button>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">登录</button>
     </form>
 
     <p>还没有账户？<a href="{% url 'accounts:register' %}">注册</a></p>
