--- a/project/accounts/templates/register.html
+++ b/project/accounts/templates/register.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>注册</title>
+    <link rel="stylesheet" href="{% static 'styles/st.css' %}">
 </head>
 <body>
-  <h2>注册</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">注册</button>
-  </form>
+    <h2>注册</h2>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">注册</button>
+    </form>
 
-  <p>已有账户？<a href="{% url 'accounts:login' %}">登录</a></p>
+    <p>已有账户？<a href="{% url 'accounts:login' %}">登录</a></p>
 </body>
 </html>
