--- a/project/accounts/templates/base.html
+++ b/project/accounts/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'styles/st.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/st.css' %}">
 </head>
 <body>
     {% if messages %}
