--- a/project/accounts/templates/pizzas.html
+++ b/project/accounts/templates/pizzas.html
@@ -18,6 +18,7 @@
         <li>No Pizza have been added yet.</li>
       {% endfor %}
     </ul>
+  <a href="{% url 'accounts:new_food'%}">添加新菜单</a>
   {% endblock content %}
 </body>
 </html>
