修改index.html中链接地址

--- a/project/accounts/templates/index.html
+++ b/project/accounts/templates/index.html
@@ -29,7 +29,7 @@
     <a href="{% url 'accounts:logout' %}">
         <button>注销</button>
     </a>
-    <p><a href="https://github.com/lieyang25/webweb">webweb</a></p>
+    <p><a href="https://github.com/lieyang25/django_kitchen">django_kitchen</a></p>
 
     <!--<script src="scripts/main.js"></script>-->
     <script src="{% static 'scripts/main.js' %}"></script>
