更新鼠标特效

--- a/project/accounts/templates/base.html
+++ b/project/accounts/templates/base.html
@@ -15,5 +15,6 @@
             {% endfor %}
         </ul>
     {% endif %}
+    <script src="{% static 'scripts/light.js' %}"></script>
 </body>
 </html>
