--- a/project/accounts/templates/index.html
+++ b/project/accounts/templates/index.html
@@ -33,5 +33,6 @@
 
     <!--<script src="scripts/main.js"></script>-->
     <script src="{% static 'scripts/main.js' %}"></script>
+    <script src="{% static 'scripts/light.js' %}"></script>
   </body>
 </html>
