--- a/project/accounts/templates/register.html
+++ b/project/accounts/templates/register.html
@@ -16,5 +16,6 @@
     </form>
 
     <p>已有账户？<a href="{% url 'accounts:login' %}">登录</a></p>
+    <script src="{% static 'scripts/light.js' %}"></script>
 </body>
 </html>
