--- a/project/accounts/templates/base2.html
+++ b/project/accounts/templates/base2.html
@@ -13,5 +13,6 @@
         <a href="{% url 'accounts:pizzas' %}">Pizzas</a>
     </p>
     {% block content %}{% endblock content %}
+    <script src="{% static 'scripts/light.js' %}"></script>
 </body>
 </html>
