--- a/project/accounts/templates/login.html
+++ b/project/accounts/templates/login.html
@@ -16,5 +16,6 @@
     </form>
 
     <p>还没有账户？<a href="{% url 'accounts:register' %}">注册</a></p>
+    <script src="{% static 'scripts/light.js' %}"></script>
 </body>
 </html>
